--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!--Cabeçalho da página--> 
         <header class="conteiner">
             <div class="logo">
-                <img src="img/logo.png" alt="logo">
+                <img src="logo.png" alt="logo">
             </div>
 
             <div class="datilografia">
